--- a/static/css/head.css
+++ b/static/css/head.css
@@ -247,7 +247,7 @@ a{
 	    z-index: 206;
 	    height: 100%;
 	    background: #fff;
-	    padding: 0;
+	    padding: 15px;
 	    margin: 0;
 	    overflow: auto;
 	    display: block;
